CHANGELOG for smartmontools

$Id: CHANGELOG,v 1.40 2002/11/07 21:51:34 ballen4705 Exp $

Copyright (C) 2002 Bruce Allen <smartmontools-support@lists.sourceforge.net>

Home page of code is: http://smartmontools.sourceforge.net

This program is free software; you can redistribute it and/or modify it
under the terms of the GNU General Public License as published by the Free
Software Foundation; either version 2, or (at your option) any later
version.

You should have received a copy of the GNU General Public License (for
example COPYING); if not, write to the Free Software Foundation, Inc., 675
Mass Ave, Cambridge, MA 02139, USA.

This code was originally developed as a Senior Thesis by Michael Cornwell
at the Concurrent Systems Laboratory (now part of the Storage Systems
Research Center), Jack Baskin School of Engineering, University of
California, Santa Cruz. http://ssrc.soe.ucsc.edu/


NOTES FOR FUTURE RELEASES: see TODO file.

CURRENT RELEASE (see VERSION file in this directory):

  Added manual page smartd.conf.5 for configuration file.

  smartctl: Missing ANSI prototype in failuretest(); fixed.

  smartctl: Checksum warnings now printed on stdout, or are silent,
  depending upon -q and -Q settings.

smartmontools-5.0.31

  Changed Makefile so that the -V option does not reflect file state
  before commit!

  smartctl: added new options -W, -U, and -P to control if and how the
  smartctl exits if an error is detected in either a SMART data
  structure checksum, or a SMART command returns an error.

  modified manual page to break options into slightly more logical
  categories.

  reformatted 'usage' message order to agree with man page ordering

  modified .spec file so that locale information now contains
  character set definition.   Changed pt_BR to pt since we do not use any
  aspect other than language.  See man setlocale.

smartmontools-5.0.30
  smartctl: added new options -n and -N to force device to be ATA or SCSI