@@ -34,6 +34,7 @@ DEVICESCAN
 #   -A    Device is an ATA device
 #   -S    Device is a SCSI device
 #   -C N  Check disks every N seconds.  N must be 10 or greater
+#   -P    Ignore lack of SMART (for disks before ATA-3 Rev 4)
 #   -c    Monitor SMART Health Status
 #   -l    Monitor SMART Error Log for changes
 #   -L    Monitor SMART Self-Test Log for new errors
