@@ -1,6 +1,6 @@
 \# Copyright (C) 2002 Bruce Allen <smartmontools-support@lists.sourceforge.net>
 \# 
-\# $Id: smartd.conf.5,v 1.1 2002/11/08 12:00:05 ballen4705 Exp $
+\# $Id: smartd.conf.5,v 1.2 2002/11/10 21:54:19 ballen4705 Exp $
 \#
 \# This program is free software; you can redistribute it and/or modify it
 \# under the terms of the GNU General Public License as published by the Free
@@ -16,7 +16,7 @@
 \# Research Center), Jack Baskin School of Engineering, University of
 \# California, Santa Cruz. http://ssrc.soe.ucsc.edu/
 \#
-.TH SMARTD.CONF 5  "$Date: 2002/11/08 12:00:05 $" "smartmontools-5.0"
+.TH SMARTD.CONF 5  "$Date: 2002/11/10 21:54:19 $" "smartmontools-5.0"
 .SH NAME
 /etc/smartd.conf \- S.M.A.R.T. Monitoring Daemon Configuration File
 
@@ -72,6 +72,7 @@ configuration file in
 For security, the configuration file should not be writable by anyone
 but root. The syntax of the file is as follows:
 
+.IP
 There should be one device listed per line, although you may have
 lines that are entirely comments or white space.
 
@@ -81,6 +82,8 @@ taken to be a comment, and ignored.
 Lines may be continued by using a backslash (\(rs) as the last
 non-whitespace or non-comment item on a line.
 
+.PP 0
+.fi
 Here is an example configuration file.  It's for illustrative purposes
 only; please don't copy it onto your system without reading to the end
 of the
@@ -175,6 +178,14 @@ The default value of
 .B <N> 
 is 1800 sec, and the minimum allowed value is
 ten seconds.
+.TP
+.B \-P
+Permissive: Even if the disk appears to lack SMART capabilities, try
+to monitor it anyway.  This may be required for some old disks (prior
+to ATA-3 revision 4) that implemented SMART before the SMART standards
+were incorporated into the ATA/ATAPI Specifications.  [Please see the
+.B smartctl \-P
+command-line option.]
 .TP
 .B \-c
 Check: Will check the SMART status of the disk.  If any Prefailure
@@ -330,4 +341,4 @@ SEE ALSO:
 
 .SH
 CVS ID OF THIS PAGE:
-$Id: smartd.conf.5,v 1.1 2002/11/08 12:00:05 ballen4705 Exp $
+$Id: smartd.conf.5,v 1.2 2002/11/10 21:54:19 ballen4705 Exp $
