@@ -1,6 +1,6 @@
 CHANGELOG for smartmontools
 
-$Id: CHANGELOG,v 1.40 2002/11/07 21:51:34 ballen4705 Exp $
+$Id: CHANGELOG,v 1.41 2002/11/10 21:54:19 ballen4705 Exp $
 
 Copyright (C) 2002 Bruce Allen <smartmontools-support@lists.sourceforge.net>
 
@@ -24,6 +24,17 @@ California, Santa Cruz. http://ssrc.soe.ucsc.edu/
 NOTES FOR FUTURE RELEASES: see TODO file.
 
 CURRENT RELEASE (see VERSION file in this directory):
+
+  Started impementing send-mail-on-error for smartd; not yet enabled.
+
+  Added -P (Permissive) Directive to smartd.conf file to allow SMART
+  monitoring of pre-ATA-3 Rev 4 disks that have SMART but do not have
+  a SMART capability bit.
+ 
+  Removed charset encodings from smartmontools.spec file for non-English
+  fields.
+
+smartmontools-5.0.32
 
   Added manual page smartd.conf.5 for configuration file.
 
